--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ padding:0
   justify-content: center;
 padding-top: 50px;
   padding-bottom: 50px;
-  padding-right: 10px;
+  /* padding-right: 10px; */
 
   color: 		#818498;
 }
